# sharenotes-backend

./: .gitignore  Cargo.toml
migrations/: 20250520235700_create_user_table.sql
src/: main.rs  state.rs
src/auth/: db.rs  extractor.rs  handlers.rs  jwt.rs  mod.rs  models.rs  password.rs
