[package]
name = "sharenotes"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "uuid",
  "chrono",
] }
redis = { version = "0.31" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
jsonwebtoken = { version = "9" }
chrono = { version = "0.4" }


[dev-dependencies]
